[package]
name = "pm1006"
description = "Platform-agnostic Rust driver for the pm1006 particulate matter sensor."
authors = ["Tom치코 Vojt치코ek <vojtasek.tomas@gmail.com>"]
version = "0.0.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/vojty/pm1006-rs"
documentation = "https://github.com/vojty/pm1006-rs"
repository = "https://github.com/vojty/pm1006-rs"
readme = "README.md"
keywords = ["embedded", "pm1006", "particulate-matter", "air-quality"]

include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[features]
default = ["log"]

[dependencies]
embedded-io = "0.6.1"
log = { version = "0.4", optional = true }